--- a/output.css
+++ b/output.css
@@ -8,14 +8,13 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-amber-50: oklch(98.7% 0.022 95.277);
+    --color-amber-100: oklch(96.2% 0.059 95.617);
+    --color-amber-200: oklch(92.4% 0.12 95.746);
+    --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-green-400: oklch(79.2% 0.209 151.711);
     --color-blue-400: oklch(70.7% 0.165 254.624);
-    --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-700: oklch(48.8% 0.243 264.376);
-    --color-blue-800: oklch(42.4% 0.199 265.638);
-    --color-blue-900: oklch(37.9% 0.146 265.522);
-    --color-blue-950: oklch(28.2% 0.091 267.935);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -175,17 +174,26 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
   .fixed {
     position: fixed;
   }
+  .relative {
+    position: relative;
+  }
+  .top-full {
+    top: 100%;
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
+  .z-10 {
+    z-index: 10;
+  }
   .m-2 {
     margin: calc(var(--spacing) * 2);
-  }
-  .m-4 {
-    margin: calc(var(--spacing) * 4);
-  }
-  .m-\[40px\] {
-    margin: 40px;
   }
   .m-auto {
     margin: auto;
@@ -199,9 +207,6 @@
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
-  }
   .mt-\[10px\] {
     margin-top: 10px;
   }
@@ -211,14 +216,8 @@
   .mt-\[20px\] {
     margin-top: 20px;
   }
-  .mt-\[30px\] {
-    margin-top: 30px;
-  }
   .mt-\[40px\] {
     margin-top: 40px;
-  }
-  .mt-\[50px\] {
-    margin-top: 50px;
   }
   .mt-\[60px\] {
     margin-top: 60px;
@@ -226,29 +225,14 @@
   .mt-\[80px\] {
     margin-top: 80px;
   }
-  .mb-0 {
-    margin-bottom: calc(var(--spacing) * 0);
-  }
-  .mb-4 {
-    margin-bottom: calc(var(--spacing) * 4);
-  }
-  .mb-\[0px\] {
-    margin-bottom: 0px;
-  }
   .mb-\[10px\] {
     margin-bottom: 10px;
-  }
-  .mb-\[20p\] {
-    margin-bottom: 20p;
   }
   .mb-\[20px\] {
     margin-bottom: 20px;
   }
   .mb-\[30px\] {
     margin-bottom: 30px;
-  }
-  .mb-\[40px\] {
-    margin-bottom: 40px;
   }
   .block {
     display: block;
@@ -262,83 +246,17 @@
   .table {
     display: table;
   }
-  .h-1 {
-    height: calc(var(--spacing) * 1);
-  }
-  .h-4 {
-    height: calc(var(--spacing) * 4);
-  }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
-  }
-  .h-12 {
-    height: calc(var(--spacing) * 12);
-  }
-  .h-15 {
-    height: calc(var(--spacing) * 15);
-  }
-  .h-40 {
-    height: calc(var(--spacing) * 40);
-  }
-  .h-100 {
-    height: calc(var(--spacing) * 100);
-  }
-  .h-110 {
-    height: calc(var(--spacing) * 110);
-  }
-  .h-120 {
-    height: calc(var(--spacing) * 120);
-  }
-  .h-125 {
-    height: calc(var(--spacing) * 125);
-  }
-  .h-135 {
-    height: calc(var(--spacing) * 135);
-  }
-  .h-145 {
-    height: calc(var(--spacing) * 145);
-  }
   .h-150 {
     height: calc(var(--spacing) * 150);
   }
-  .h-\[0vh\] {
-    height: 0vh;
-  }
-  .h-\[5\] {
-    height: 5;
-  }
-  .h-\[8\] {
-    height: 8;
-  }
-  .h-\[30vh\] {
-    height: 30vh;
-  }
-  .h-\[50p\] {
-    height: 50p;
+  .h-\[40px\] {
+    height: 40px;
   }
   .h-\[50vh\] {
     height: 50vh;
   }
-  .h-\[60vh\] {
-    height: 60vh;
-  }
-  .h-\[65vh\] {
-    height: 65vh;
-  }
-  .h-\[67vh\] {
-    height: 67vh;
-  }
-  .h-\[70\%\] {
-    height: 70%;
-  }
-  .h-\[70vh\] {
-    height: 70vh;
-  }
   .h-\[80\%\] {
     height: 80%;
-  }
-  .h-\[80\] {
-    height: 80;
   }
   .h-\[95\%\] {
     height: 95%;
@@ -346,32 +264,17 @@
   .h-\[100\%\] {
     height: 100%;
   }
-  .h-\[100\] {
-    height: 100;
-  }
-  .h-\[100vh\] {
-    height: 100vh;
-  }
   .h-\[150px\] {
     height: 150px;
-  }
-  .h-\[200px\] {
-    height: 200px;
-  }
-  .h-\[250px\] {
-    height: 250px;
   }
   .h-\[300px\] {
     height: 300px;
   }
-  .h-\[400px\] {
-    height: 400px;
+  .h-full {
+    height: 100%;
   }
-  .w-\[\%\] {
-    width: %;
-  }
-  .w-\[80\%\] {
-    width: 80%;
+  .w-\[50px\] {
+    width: 50px;
   }
   .w-\[80px\] {
     width: 80px;
@@ -388,6 +291,9 @@
   .border-collapse {
     border-collapse: collapse;
   }
+  .cursor-pointer {
+    cursor: pointer;
+  }
   .resize {
     resize: both;
   }
@@ -403,29 +309,17 @@
   .justify-center {
     justify-content: center;
   }
-  .gap-3 {
-    gap: calc(var(--spacing) * 3);
-  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
-  }
-  .gap-9 {
-    gap: calc(var(--spacing) * 9);
-  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
   .gap-\[20px\] {
     gap: 20px;
-  }
-  .gap-\[40px\] {
-    gap: 40px;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
@@ -443,29 +337,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-b {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 1px;
-  }
-  .border-b-2 {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 2px;
-  }
-  .border-blue-600 {
-    border-color: var(--color-blue-600);
-  }
-  .border-blue-800 {
-    border-color: var(--color-blue-800);
-  }
-  .border-white {
-    border-color: var(--color-white);
-  }
-  .border-b-blue-600 {
-    border-bottom-color: var(--color-blue-600);
-  }
-  .bg-\[\#000\] {
-    background-color: #000;
-  }
   .bg-\[\#00000060\] {
     background-color: #00000060;
   }
@@ -478,29 +349,20 @@
   .bg-\[\#101826\] {
     background-color: #101826;
   }
-  .bg-\[\#\] {
-    background-color: #;
+  .bg-amber-50 {
+    background-color: var(--color-amber-50);
   }
-  .bg-black {
-    background-color: var(--color-black);
-  }
-  .bg-blue-400 {
-    background-color: var(--color-blue-400);
-  }
-  .bg-blue-500 {
-    background-color: var(--color-blue-500);
+  .bg-amber-100 {
+    background-color: var(--color-amber-100);
   }
   .bg-blue-600 {
     background-color: var(--color-blue-600);
   }
-  .bg-blue-900 {
-    background-color: var(--color-blue-900);
-  }
-  .bg-blue-950 {
-    background-color: var(--color-blue-950);
-  }
   .object-cover {
     object-fit: cover;
+  }
+  .object-none {
+    object-fit: none;
   }
   .p-1 {
     padding: calc(var(--spacing) * 1);
@@ -511,12 +373,6 @@
   .p-\[5px\,5px\] {
     padding: 5px,5px;
   }
-  .p-\[7px\,7px\] {
-    padding: 7px,7px;
-  }
-  .p-\[7px7px\] {
-    padding: 7px7px;
-  }
   .p-\[7px\] {
     padding: 7px;
   }
@@ -526,38 +382,23 @@
   .p-\[20px\] {
     padding: 20px;
   }
-  .p-\[40px\] {
-    padding: 40px;
-  }
-  .p-\[px\] {
-    padding: px;
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
-  .px-\[10px\] {
-    padding-inline: 10px;
-  }
   .px-\[20px\] {
     padding-inline: 20px;
+  }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
   }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
   }
-  .py-\[0px\] {
-    padding-block: 0px;
-  }
   .py-\[8px\] {
     padding-block: 8px;
-  }
-  .py-\[10px\] {
-    padding-block: 10px;
-  }
-  .py-\[20px\] {
-    padding-block: 20px;
-  }
-  .py-\[px\] {
-    padding-block: px;
   }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
@@ -565,44 +406,17 @@
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
-  .pt-\[10px\] {
-    padding-top: 10px;
-  }
   .pt-\[15px\] {
     padding-top: 15px;
   }
   .pt-\[20px\] {
     padding-top: 20px;
   }
-  .pt-\[40px\] {
-    padding-top: 40px;
-  }
-  .pt-\[60px\] {
-    padding-top: 60px;
-  }
-  .pt-\[80px\] {
-    padding-top: 80px;
-  }
   .pt-\[100px\] {
     padding-top: 100px;
   }
   .pr-\[20px\] {
     padding-right: 20px;
-  }
-  .pb-\[0px\] {
-    padding-bottom: 0px;
-  }
-  .pb-\[10px\] {
-    padding-bottom: 10px;
-  }
-  .pb-\[40px\] {
-    padding-bottom: 40px;
-  }
-  .pb-\[px\] {
-    padding-bottom: px;
-  }
-  .pl-3 {
-    padding-left: calc(var(--spacing) * 3);
   }
   .pl-5 {
     padding-left: calc(var(--spacing) * 5);
@@ -620,9 +434,6 @@
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
-  }
-  .text-\[10px\] {
-    font-size: 10px;
   }
   .text-\[15px\] {
     font-size: 15px;
@@ -643,14 +454,8 @@
   .text-blue-400 {
     color: var(--color-blue-400);
   }
-  .text-blue-600 {
-    color: var(--color-blue-600);
-  }
   .text-blue-700 {
     color: var(--color-blue-700);
-  }
-  .text-blue-800 {
-    color: var(--color-blue-800);
   }
   .text-white {
     color: var(--color-white);
@@ -666,9 +471,26 @@
     outline-style: var(--tw-outline-style);
     outline-width: 0px;
   }
-  .outline-none {
-    --tw-outline-style: none;
-    outline-style: none;
+  .group-hover\:block {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        display: block;
+      }
+    }
+  }
+  .hover\:block {
+    &:hover {
+      @media (hover: hover) {
+        display: block;
+      }
+    }
+  }
+  .hover\:bg-amber-200 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-amber-200);
+      }
+    }
   }
   .hover\:bg-green-400 {
     &:hover {
@@ -697,19 +519,9 @@
       height: 67vh;
     }
   }
-  .md\:w-\[0\%\] {
-    @media (width >= 48rem) {
-      width: 0%;
-    }
-  }
   .md\:w-\[30\%\] {
     @media (width >= 48rem) {
       width: 30%;
-    }
-  }
-  .md\:w-\[40\%\] {
-    @media (width >= 48rem) {
-      width: 40%;
     }
   }
   .md\:w-\[42\%\] {
@@ -720,11 +532,6 @@
   .md\:w-\[50\%\] {
     @media (width >= 48rem) {
       width: 50%;
-    }
-  }
-  .md\:w-\[420\%\] {
-    @media (width >= 48rem) {
-      width: 420%;
     }
   }
   .md\:flex-row {
