--- a/output.css
+++ b/output.css
@@ -186,6 +186,9 @@
   .top-full {
     top: 100%;
   }
+  .right-6 {
+    right: calc(var(--spacing) * 6);
+  }
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
@@ -225,6 +228,9 @@
   .mt-\[80px\] {
     margin-top: 80px;
   }
+  .mr-\[40px\] {
+    margin-right: 40px;
+  }
   .mb-\[10px\] {
     margin-bottom: 10px;
   }
@@ -249,6 +255,9 @@
   .h-150 {
     height: calc(var(--spacing) * 150);
   }
+  .h-\[0px\] {
+    height: 0px;
+  }
   .h-\[40px\] {
     height: 40px;
   }
@@ -263,6 +272,9 @@
   }
   .h-\[100\%\] {
     height: 100%;
+  }
+  .h-\[100px\] {
+    height: 100px;
   }
   .h-\[150px\] {
     height: 150px;
@@ -287,6 +299,9 @@
   }
   .w-\[100\%\] {
     width: 100%;
+  }
+  .w-\[100px\] {
+    width: 100px;
   }
   .border-collapse {
     border-collapse: collapse;
